--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width" initial-scale="1"/>
     <title>Edie homepage</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;700;800&display=swap" rel="stylesheet"> 
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@800&display=swap" rel="stylesheet"> 
 </head>
 <body>
-
-    <header id="logo">Edie
-    <nav class="navigation">    
+    <main id="home">
+    <div class="flex-main" >
+    <div class="item1"><p id="logo">Edie</p></div>
+    <div class="item2"><nav class="navigation">    
     <a href="#home">Home</a>
     <a href="#services">Services</a>
     <a href="#work">Our Work</a>
     <a href="#clients">Clients</a>
     <a href="#contact">Contact</a>
-</nav></header>
-<main id="home">
-    <p>Unhappy with your homepage?</p>
+</nav></div></div>
+    <p class="blue">Unhappy with your homepage?</p>
     <h1>We create beautiful and fast web tabs</h1>
     <figure><img src="Images/heroImage.jpg" alt="Bunch of people brainstorming some ideas on whiteboard"></figure>
     <section>
         <h1>Story, emotion and purpose</h1>
         <p>We help transform your ideas into real world applications that will outperform your toughest competition and help you achieve your strategic goals in short period of time.</p>
-        <p>Want us to contact you?</p>
+        <p id="grey3">Want us to contact you?</p>
         <label for ="email-text">
             <input type="email" id="email-text" placeholder="Email" required>
             <label for="join">
@@ -34,23 +39,97 @@
 <h2>We offer high demand services </h2>
 <div id="flex-container">
     <div class="ui-ux">
-        <svg class="icon icon-pencil, write, blog, save, note">
-            <use xlink:href="/icomoon/sprite.svg#icon-pencil"></use>
-        </svg>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
+        <h3>UI/UX Design</h3>
+        <div class="blue square">
+            <img src="Images/create-white-18dp.svg" alt="create icon" class="svg1">
+        </div>
+        <p class="servicep">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
         <button>Get started</button>
     </div>
     <div class="frontend">
-        <img>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
+        <h3>Frontend</h3>
+        <div class="green square">
+            <img src="Images/code-white-18dp.svg" alt="code icon" class="svg1">
+        </div>
+        <p class="servicep">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
         <button>Get started</button>
     </div>
     <div class="backend">
-        <img>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
+        <h3>Backend</h3>
+        <div class="red square">
+            <img src="Images/storage-white-18dp.svg" alt="storage icon" class="svg1">
+        </div>
+        <p class="servicep">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
         <button>Get started</button>
     </div>
 </div>
-
 </section>
+<section id="work">
+    <h2>Good design means good business</h2>
+    <div id="grid-container">
+        <div class="Smart-home-dashboard">
+          <img src="Images/smarthome.jpg" alt="smarthome website image">
+          <p class="projecttype">Full stack application</p>
+          <h4 class="projectname">Smart home dashboard</h4>
+        </div>
+        <div class="Onboard-application">
+            <img src="Images/onboard.png" alt="Onboard application image">
+            <p class="projecttype">UX/UI design</p>
+            <h4 class="projectname">Onboard application</h4>
+          </div>
+          <div class="Booking-application">
+            <img src="Images/booking.png" alt="booking application image">
+            <p class="projecttype">Mobile application</p>
+            <h4 class="projectname">Booking system</h4>
+          </div>
+          <div class="Juice-product-homepage">
+            <img src="Images/juice-product.png" alt="juice product image">
+            <p class="projecttype">Front End application</p>
+            <h4 class="projectname">Juice product homepage</h4>
+          </div>
+    </div>
+    <a href="#">see more...</a>
+</section>
+<section id="team">
+    <p id="red">Meet the team</p>
+    <h2>We are chilled and a laidback team</h2>
+    <p id="teamp">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <div class="team-images">
+        
+            <img src="Images/person3.png">
+            <img src="Images/person1.png">
+            <img src="Images/person2.png">
+        
+    </div>
+</section>
+<section id="clients">
+<h2>“Fast and outstanding resutls. Edie understands their customer’s needs. They have a young and talented team.”</h2>
+<img src="Images/person4.png">
+<h5>Carlos Tran</h5>
+<p>The Decorate Gatsby</p>
+</section>
+<section id="Contact">
+    <nav class="nav-bottom">
+    <a href="#home">Home</a>
+    <a href="#services">Services</a>
+    <a href="#work">Our Work</a>
+    <a href="#clients">Clients</a>
+    <a href="#contact">Contact</a>
+    </nav>
+    <div class="main-contact"><h5 class="logo">Edie</h5>
+        <img src="Images/instagram.svg">
+        <img src="Images/linkedin.svg">
+        <img src="Images/twitter.svg">
+      </div>
+      <label for ="email-text">
+        <input type="email" id="email-text" placeholder="Email" required>
+        <label for="join">
+            <button type="submit" id="join">Join</button>
+        </label>
+    </label>
+    <footer>
+        Your name @ DevChallenges.io
+    </footer>
+</section>
+
 </body>
